# chatgpt_rust

./: .gitignore  Cargo.toml
res/: config.json.template  secret.json
src/: lib.rs  main.rs
