[package]
name = "chatgpt_rust"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.48"
chrono = "0.4"
termion = "2.0.1"